Vertical alignment in header fixed (using flex instead of inline-blocks),

--- a/app/styles/config/_mixins.scss
+++ b/app/styles/config/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin circle($width, $color) {
 	width: $width;
 	height: $width;
-	border-radius: $width/2;
+	border-radius: 100%;
 	background-color: $color;
 }
 
