--- a/app/styles/sections/_reviews.scss
+++ b/app/styles/sections/_reviews.scss
@@ -63,7 +63,6 @@
 
 .review__button {
 	background-color: $dark-text;
-	display: inline-block;
 	&:hover {
 		background-color: $button-hover-dark;
 	}
